# threat-dragon-generator

./: Cargo.toml  Dockerfile  README.md  config.yaml  convert_pdf_to_png.sh  demo.xlsx  new-model-3.json  new-model-4.json  threats.yaml
.github/workflows/: docker-publish.yml
diagrams/: Diagram1.yaml  Diagram2.yaml
exemples/: config.yaml  threats.yaml
exemples/diagrams/: Diagram1.yaml  Diagram2.yaml
exemples/output/: .~A1_Diagram1.xlsx  A1_Diagram1.xlsx  A2_Child_Data_Flow.xlsx  B1_Diagram2.xlsx  B2_Child_Data_Flow.xlsx  output.json
output/: output.json
src/: main.rs
src/config/: config.rs
src/input/: input_diagram.rs  mod.rs  threat.rs
src/json/: cell_data.rs  diagram.rs  general.rs  mod.rs
src/process/: process.rs
src/reports/: mod.rs
src/reports/xls/: excel_error.rs  mod.rs  xls_reports.rs
src/threat_dragon_modeling/: diagram.rs  general.rs
